--- a/searx/settings.yml
+++ b/searx/settings.yml
@@ -1,4 +1,4 @@
-# SearXNG settings.yml - Final Corrected Version
+# SearXNG settings.yml - Final Corrected Version (All YAML Syntax Fixed)
 
 use_default_settings: true
 
@@ -519,7 +519,7 @@ engines:
     results_xpath: //a[@class='_list-item']
     url_xpath: ./@href
     title_xpath: .//span[@class='_list-text']
-    content_xpath: .//span[@class='_list-text'] # <-- FIX 1: Added missing content_xpath
+    content_xpath: .//span[@class='_list-text']
     timeout: 6.0
     disabled: false
 
@@ -803,7 +803,7 @@ engines:
 
   - name: producthunt
     engine: xpath
-    shortcut: phunt # <-- FIX 2: Changed shortcut from 'ph' to 'phunt'
+    shortcut: phunt
     categories: [alternatives, app discovery, it]
     paging: false
     search_url: https://www.producthunt.com/search?q={query}
@@ -1155,7 +1155,10 @@ engines:
     paging: true
     search_url: https://api.openaire.eu/search/publications?format=json&page={pageno}&size=10&title={query}
     results_query: response/results/result
-    url_query: metadata/oaf:entity/oaf:result/children/instance/webresource/url/$     title_query: metadata/oaf:entity/oaf:result/title/$     content_query: metadata/oaf:entity/oaf:result/description/$     content_html_to_text: true
+    url_query: "metadata/oaf:entity/oaf:result/children/instance/webresource/url/$"
+    title_query: "metadata/oaf:entity/oaf:result/title/$"
+    content_query: "metadata/oaf:entity/oaf:result/description/$"
+    content_html_to_text: true
     categories: science
     shortcut: oap
     timeout: 5.0
@@ -1165,7 +1168,10 @@ engines:
     paging: true
     search_url: https://api.openaire.eu/search/datasets?format=json&page={pageno}&size=10&title={query}
     results_query: response/results/result
-    url_query: metadata/oaf:entity/oaf:result/children/instance/webresource/url/$     title_query: metadata/oaf:entity/oaf:result/title/$     content_query: metadata/oaf:entity/oaf:result/description/$     content_html_to_text: true
+    url_query: "metadata/oaf:entity/oaf:result/children/instance/webresource/url/$"
+    title_query: "metadata/oaf:entity/oaf:result/title/$"
+    content_query: "metadata/oaf:entity/oaf:result/description/$"
+    content_html_to_text: true
     categories: science
     shortcut: oad
     timeout: 5.0
@@ -1273,7 +1279,7 @@ engines:
     disabled: false
     shortcut: lg
 
-  - name: archive is
+  - name: "archive is"
     engine: xpath
     search_url: https://archive.is/search/?q={query}
     url_xpath: (//div[@class="TEXT-BLOCK"]/a)/@href
@@ -1459,7 +1465,7 @@ engines:
     categories: images
     disabled: false
 
-  - name: library of congress
+  - name: "library of congress"
     engine: loc
     shortcut: loc
     categories: images
